# audiolizer

./: Cargo.toml  README.md
src/: audio.rs  main.rs  style.rs
src/theme/: dark.rs  light.rs  midnight.rs  mod.rs
src/ui/: bars.rs  mod.rs  settings.rs  sliders.rs
