[package]
name = "audiolizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["canvas", "tokio", "debug"] }
gag = "1.0.0"
colored = "2.0.0"
cpal = { version = "0.13.4", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.45"
audioviz = { path = "../audioviz" }
