[package]
name = "audiolizer"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["canvas", "tokio", "debug"] }
gag = "1.0.0"
colored = "2.0.0"
cpal = "0.13.4"
#audioviz = "0.2.0"
audioviz = { git = "https://github.com/BrunoWallner/audioviz", branch = "main" }
image = "0.23.14"
